test/sema/struct_in_declref.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: int,
}

fn foo(s: S) -> int {
  return s.x;
}

fn main() -> void {
  foo(S);
  // CHECK: [[# @LINE - 1 ]]:7: error: expected an instance of 'S'
}
